--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@11ty/eleventy": "^0.12.1",
+		"@11ty/eleventy-plugin-rss": "^1.1.1",
 		"sass": "^1.35.2"
 	}
 }
